Language/go-compiler/testdata/dsl/parser/dag_parser.go
// Code generated from DAG.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // DAG
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type DAGParser struct {
	*antlr.BaseParser
}

var DAGParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func dagParserInit() {
	staticData := &DAGParserStaticData
	staticData.LiteralNames = []string{
		"", "'imports'", "'dag'", "'generates'", "'nodes'", "'success'", "'error'",
		"'abort'", "'branches'", "'end'", "':='", "'='", "'->'", "'<-'", "':'",
		"'{'", "'}'", "'['", "']'", "'('", "')'", "','",
	}
	staticData.SymbolicNames = []string{
		"", "IMPORTS", "DAG", "GENERATES", "NODES", "SUCCESS", "ERROR", "ABORT",
		"BRANCHES", "END", "COLON_ASSIGN", "ASSIGN", "RIGHT_ARROW", "LEFT_ARROW",
		"COLON", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN",
		"COMMA", "IDENT", "STRING", "WS",
	}
	staticData.RuleNames = []string{
		"program", "importStatement", "dagStatement", "parameters", "parameter",
		"nodesStatement", "nodeAssignment", "successStatement", "errorStatement",
		"abortStatement", "branchesStatement", "edgeStatement", "branchAssignment",
		"branchPair", "stringLiteral",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// DAGParserInit initializes any static state used to implement DAGParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewDAGParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func DAGParserInit() {
	staticData := &DAGParserStaticData
	staticData.once.Do(dagParserInit)
}

// NewDAGParser produces a new parser instance for the optional input antlr.TokenStream.
func NewDAGParser(input antlr.TokenStream) *DAGParser {
	DAGParserInit()
	this := new(DAGParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &DAGParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "DAG.g4"

	return this
}

// DAGParser tokens.
const (
	DAGParserEOF          = antlr.TokenEOF
	DAGParserIMPORTS      = 1
	DAGParserDAG          = 2
	DAGParserGENERATES    = 3
	DAGParserNODES        = 4
	DAGParserSUCCESS      = 5
	DAGParserERROR        = 6
	DAGParserABORT        = 7
	DAGParserBRANCHES     = 8
	DAGParserEND          = 9
	DAGParserCOLON_ASSIGN = 10
	DAGParserASSIGN       = 11
	DAGParserRIGHT_ARROW  = 12
	DAGParserLEFT_ARROW   = 13
	DAGParserCOLON        = 14
	DAGParserLBRACE       = 15
	DAGParserRBRACE       = 16
	DAGParserLBRACKET     = 17
	DAGParserRBRACKET     = 18
	DAGParserLPAREN       = 19
	DAGParserRPAREN       = 20
	DAGParserCOMMA        = 21
	DAGParserIDENT        = 22
	DAGParserSTRING       = 23
	DAGParserWS           = 24
)

// DAGParser rules.
const (
	DAGParserRULE_program           = 0
	DAGParserRULE_importStatement   = 1
	DAGParserRULE_dagStatement      = 2
	DAGParserRULE_parameters        = 3
	DAGParserRULE_parameter         = 4
	DAGParserRULE_nodesStatement    = 5
	DAGParserRULE_nodeAssignment    = 6
	DAGParserRULE_successStatement  = 7
	DAGParserRULE_errorStatement    = 8
	DAGParserRULE_abortStatement    = 9
	DAGParserRULE_branchesStatement = 10
	DAGParserRULE_edgeStatement     = 11
	DAGParserRULE_branchAssignment  = 12
	DAGParserRULE_branchPair        = 13
	DAGParserRULE_stringLiteral     = 14
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	ImportStatement() IImportStatementContext
	AllDagStatement() []IDagStatementContext
	DagStatement(i int) IDagStatementContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DAGParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(DAGParserEOF, 0)
}

func (s *ProgramContext) ImportStatement() IImportStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStatementContext)
}

func (s *ProgramContext) AllDagStatement() []IDagStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDagStatementContext); ok {
			len++
		}
	}

	tst := make([]IDagStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDagStatementContext); ok {
			tst[i] = t.(IDagStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) DagStatement(i int) IDagStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDagStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDagStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DAGVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DAGParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DAGParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(31)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == DAGParserIMPORTS {
		{
			p.SetState(30)
			p.ImportStatement()
		}

	}
	p.SetState(36)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == DAGParserDAG {
		{
			p.SetState(33)
			p.DagStatement()
		}

		p.SetState(38)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(39)
		p.Match(DAGParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportStatementContext is an interface to support dynamic dispatch.
type IImportStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IMPORTS() antlr.TerminalNode
	COLON() antlr.TerminalNode
	AllStringLiteral() []IStringLiteralContext
	StringLiteral(i int) IStringLiteralContext

	// IsImportStatementContext differentiates from other interfaces.
	IsImportStatementContext()
}

type ImportStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStatementContext() *ImportStatementContext {
	var p = new(ImportStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_importStatement
	return p
}

func InitEmptyImportStatementContext(p *ImportStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_importStatement
}

func (*ImportStatementContext) IsImportStatementContext() {}

func NewImportStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStatementContext {
	var p = new(ImportStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DAGParserRULE_importStatement

	return p
}

func (s *ImportStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStatementContext) IMPORTS() antlr.TerminalNode {
	return s.GetToken(DAGParserIMPORTS, 0)
}

func (s *ImportStatementContext) COLON() antlr.TerminalNode {
	return s.GetToken(DAGParserCOLON, 0)
}

func (s *ImportStatementContext) AllStringLiteral() []IStringLiteralContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStringLiteralContext); ok {
			len++
		}
	}

	tst := make([]IStringLiteralContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStringLiteralContext); ok {
			tst[i] = t.(IStringLiteralContext)
			i++
		}
	}

	return tst
}

func (s *ImportStatementContext) StringLiteral(i int) IStringLiteralContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStringLiteralContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStringLiteralContext)
}

func (s *ImportStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.EnterImportStatement(s)
	}
}

func (s *ImportStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.ExitImportStatement(s)
	}
}

func (s *ImportStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DAGVisitor:
		return t.VisitImportStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DAGParser) ImportStatement() (localctx IImportStatementContext) {
	localctx = NewImportStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DAGParserRULE_importStatement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.Match(DAGParserIMPORTS)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(42)
		p.Match(DAGParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == DAGParserSTRING {
		{
			p.SetState(43)
			p.StringLiteral()
		}

		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDagStatementContext is an interface to support dynamic dispatch.
type IDagStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetTyp returns the typ token.
	GetTyp() antlr.Token

	// GetName returns the name token.
	GetName() antlr.Token

	// GetGenerates returns the generates token.
	GetGenerates() antlr.Token

	// SetTyp sets the typ token.
	SetTyp(antlr.Token)

	// SetName sets the name token.
	SetName(antlr.Token)

	// SetGenerates sets the generates token.
	SetGenerates(antlr.Token)

	// Getter signatures
	DAG() antlr.TerminalNode
	LBRACKET() antlr.TerminalNode
	RBRACKET() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	RPAREN() antlr.TerminalNode
	GENERATES() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	NodesStatement() INodesStatementContext
	RBRACE() antlr.TerminalNode
	AllIDENT() []antlr.TerminalNode
	IDENT(i int) antlr.TerminalNode
	Parameters() IParametersContext
	AllSuccessStatement() []ISuccessStatementContext
	SuccessStatement(i int) ISuccessStatementContext
	AllErrorStatement() []IErrorStatementContext
	ErrorStatement(i int) IErrorStatementContext
	AllAbortStatement() []IAbortStatementContext
	AbortStatement(i int) IAbortStatementContext
	AllBranchesStatement() []IBranchesStatementContext
	BranchesStatement(i int) IBranchesStatementContext

	// IsDagStatementContext differentiates from other interfaces.
	IsDagStatementContext()
}

type DagStatementContext struct {
	antlr.BaseParserRuleContext
	parser    antlr.Parser
	typ       antlr.Token
	name      antlr.Token
	generates antlr.Token
}

func NewEmptyDagStatementContext() *DagStatementContext {
	var p = new(DagStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_dagStatement
	return p
}

func InitEmptyDagStatementContext(p *DagStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_dagStatement
}

func (*DagStatementContext) IsDagStatementContext() {}

func NewDagStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DagStatementContext {
	var p = new(DagStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DAGParserRULE_dagStatement

	return p
}

func (s *DagStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *DagStatementContext) GetTyp() antlr.Token { return s.typ }

func (s *DagStatementContext) GetName() antlr.Token { return s.name }

func (s *DagStatementContext) GetGenerates() antlr.Token { return s.generates }

func (s *DagStatementContext) SetTyp(v antlr.Token) { s.typ = v }

func (s *DagStatementContext) SetName(v antlr.Token) { s.name = v }

func (s *DagStatementContext) SetGenerates(v antlr.Token) { s.generates = v }

func (s *DagStatementContext) DAG() antlr.TerminalNode {
	return s.GetToken(DAGParserDAG, 0)
}

func (s *DagStatementContext) LBRACKET() antlr.TerminalNode {
	return s.GetToken(DAGParserLBRACKET, 0)
}

func (s *DagStatementContext) RBRACKET() antlr.TerminalNode {
	return s.GetToken(DAGParserRBRACKET, 0)
}

func (s *DagStatementContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(DAGParserLPAREN, 0)
}

func (s *DagStatementContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(DAGParserRPAREN, 0)
}

func (s *DagStatementContext) GENERATES() antlr.TerminalNode {
	return s.GetToken(DAGParserGENERATES, 0)
}

func (s *DagStatementContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(DAGParserLBRACE, 0)
}

func (s *DagStatementContext) NodesStatement() INodesStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INodesStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INodesStatementContext)
}

func (s *DagStatementContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(DAGParserRBRACE, 0)
}

func (s *DagStatementContext) AllIDENT() []antlr.TerminalNode {
	return s.GetTokens(DAGParserIDENT)
}

func (s *DagStatementContext) IDENT(i int) antlr.TerminalNode {
	return s.GetToken(DAGParserIDENT, i)
}

func (s *DagStatementContext) Parameters() IParametersContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParametersContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParametersContext)
}

func (s *DagStatementContext) AllSuccessStatement() []ISuccessStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISuccessStatementContext); ok {
			len++
		}
	}

	tst := make([]ISuccessStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISuccessStatementContext); ok {
			tst[i] = t.(ISuccessStatementContext)
			i++
		}
	}

	return tst
}

func (s *DagStatementContext) SuccessStatement(i int) ISuccessStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISuccessStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISuccessStatementContext)
}

func (s *DagStatementContext) AllErrorStatement() []IErrorStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IErrorStatementContext); ok {
			len++
		}
	}

	tst := make([]IErrorStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IErrorStatementContext); ok {
			tst[i] = t.(IErrorStatementContext)
			i++
		}
	}

	return tst
}

func (s *DagStatementContext) ErrorStatement(i int) IErrorStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IErrorStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IErrorStatementContext)
}

func (s *DagStatementContext) AllAbortStatement() []IAbortStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAbortStatementContext); ok {
			len++
		}
	}

	tst := make([]IAbortStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAbortStatementContext); ok {
			tst[i] = t.(IAbortStatementContext)
			i++
		}
	}

	return tst
}

func (s *DagStatementContext) AbortStatement(i int) IAbortStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAbortStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAbortStatementContext)
}

func (s *DagStatementContext) AllBranchesStatement() []IBranchesStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBranchesStatementContext); ok {
			len++
		}
	}

	tst := make([]IBranchesStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBranchesStatementContext); ok {
			tst[i] = t.(IBranchesStatementContext)
			i++
		}
	}

	return tst
}

func (s *DagStatementContext) BranchesStatement(i int) IBranchesStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBranchesStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBranchesStatementContext)
}

func (s *DagStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DagStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DagStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.EnterDagStatement(s)
	}
}

func (s *DagStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.ExitDagStatement(s)
	}
}

func (s *DagStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DAGVisitor:
		return t.VisitDagStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DAGParser) DagStatement() (localctx IDagStatementContext) {
	localctx = NewDagStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DAGParserRULE_dagStatement)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		p.Match(DAGParserDAG)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(DAGParserLBRACKET)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(51)

		var _m = p.Match(DAGParserIDENT)

		localctx.(*DagStatementContext).typ = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(52)
		p.Match(DAGParserRBRACKET)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)

		var _m = p.Match(DAGParserIDENT)

		localctx.(*DagStatementContext).name = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(54)
		p.Match(DAGParserLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == DAGParserIDENT {
		{
			p.SetState(55)
			p.Parameters()
		}

	}
	{
		p.SetState(58)
		p.Match(DAGParserRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(59)
		p.Match(DAGParserGENERATES)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(60)

		var _m = p.Match(DAGParserIDENT)

		localctx.(*DagStatementContext).generates = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(61)
		p.Match(DAGParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(62)
		p.NodesStatement()
	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&480) != 0 {
		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case DAGParserSUCCESS:
			{
				p.SetState(63)
				p.SuccessStatement()
			}

		case DAGParserERROR:
			{
				p.SetState(64)
				p.ErrorStatement()
			}

		case DAGParserABORT:
			{
				p.SetState(65)
				p.AbortStatement()
			}

		case DAGParserBRANCHES:
			{
				p.SetState(66)
				p.BranchesStatement()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(71)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(72)
		p.Match(DAGParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IParametersContext is an interface to support dynamic dispatch.
type IParametersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllParameter() []IParameterContext
	Parameter(i int) IParameterContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsParametersContext differentiates from other interfaces.
	IsParametersContext()
}

type ParametersContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParametersContext() *ParametersContext {
	var p = new(ParametersContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_parameters
	return p
}

func InitEmptyParametersContext(p *ParametersContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DAGParserRULE_parameters
}

func (*ParametersContext) IsParametersContext() {}

func NewParametersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParametersContext {
	var p = new(ParametersContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DAGParserRULE_parameters

	return p
}

func (s *ParametersContext) GetParser() antlr.Parser { return s.parser }

func (s *ParametersContext) AllParameter() []IParameterContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IParameterContext); ok {
			len++
		}
	}

	tst := make([]IParameterContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IParameterContext); ok {
			tst[i] = t.(IParameterContext)
			i++
		}
	}

	return tst
}

func (s *ParametersContext) Parameter(i int) IParameterContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParameterContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParameterContext)
}

func (s *ParametersContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(DAGParserCOMMA)
}

func (s *ParametersContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(DAGParserCOMMA, i)
}

func (s *ParametersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParametersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParametersContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.EnterParameters(s)
	}
}

func (s *ParametersContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DAGListener); ok {
		listenerT.ExitParameters(s)
	}
}

func (s *ParametersContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DAGVisitor:
		return t.VisitParameters(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DAGParser) Parameters() (localctx IParametersContext) {
	localctx = NewParametersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DAGParserRULE_parameters)
	var _la int
